<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/prefixNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputPrefixNameHint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputNameHint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/prefixNameEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/middleNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputMiddleNameHint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputLastNameHint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/middleNameEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/suffixNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputSuffixNameHint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputPhoneNumberHint"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/suffixNameEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputEmailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/saveButtonText"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>